--- a/css/ie/v8.css
+++ b/css/ie/v8.css
@@ -1,5 +1,5 @@
 /*
-	Strongly Typed by HTML5 UP
+	Overflow by HTML5 UP
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
@@ -8,23 +8,18 @@
 /* Basic                                                                         */
 /*********************************************************************************/
 
-	form input[type="text"],
-	form input[type="email"],
-	form input[type="password"],
-	form select,
-	form textarea,
-	input[type="button"],
-	input[type="submit"],
-	input[type="reset"],
-	.button,
-	.box.excerpt .date
+	body
 	{
-		position: relative;
-		-ms-behavior: url('css/ie/PIE.htc');
+		background-image:		url('../../images/bg.jpg');
+		background-repeat:		no-repeat;
+		background-size:		cover;
+		background-position: 	auto;
+		background-attachment:	scroll;
+		-ms-behavior: url('css/ie/backgroundsize.min.htc');
 	}
 
-	/* Sections/Article */
-	
+	/* Section/Article */
+
 		section,
 		article
 		{
@@ -41,16 +36,69 @@
 			{
 				margin-bottom: 0;
 			}
+
+	/* Button */
+
+		input[type="button"],
+		input[type="submit"],
+		input[type="reset"],
+		.button
+		{
+			position: relative;
+			-ms-behavior: url('css/ie/PIE.htc');
+		}
+
+			input[type="button"].style2,
+			input[type="submit"].style2,
+			input[type="reset"].style2,
+			.button.style2
+			{
+			}
+
+				input[type="button"].style2:hover,
+				input[type="submit"].style2:hover,
+				input[type="reset"].style2:hover,
+				.button.style2:hover
+				{
+					color: #35b88f !important;
+				}
+			
+			input[type="button"].style3,
+			input[type="submit"].style3,
+			input[type="reset"].style3,
+			.button.style3
+			{
+				background: #fefefe;
+				border: solid 1px #dad9d9;
+			}
 			
 /*********************************************************************************/
-/* Wrappers                                                                      */
+/* Footer                                                                        */
 /*********************************************************************************/
 
-	#banner-wrapper
+	#footer
 	{
 	}
 
-		#banner-wrapper .inner
+		#footer .icons
 		{
-			-ms-behavior: url('css/ie/backgroundsize.min.htc');
+			position: relative;
+			-ms-behavior: url('css/ie/PIE.htc');
 		}
+		
+/*********************************************************************************/
+/* Header                                                                        */
+/*********************************************************************************/
+
+	#header
+	{
+	}
+	
+		#header header
+		{
+		}
+
+			#header header p
+			{
+				border-top: solid 1px #888;
+			}
