--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 
 	body,input,textarea,select
 	{
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Lato', 'Source Sans Pro', sans-serif;
 		font-size: 18pt;
 		line-height: 1.75em;
 		font-weight: 300;
