--- a/css/style.css
+++ b/css/style.css
@@ -852,7 +852,7 @@
 		color: #fff;
 		text-shadow: 0 0 0.5px rgba(255,255,255,0.25);
 		text-align: center;
-		background: #35b88f url('images/banner.svg') bottom center no-repeat;
+		background: #000 center/contain no-repeat url('../images/corkboard.png');
 		padding: 5em 0 5em 0;
 		margin: 0;
 		background-size: 125% auto;
