--- a/css/style.css
+++ b/css/style.css
@@ -33,19 +33,17 @@
 
 	body,input,textarea,select
 	{
-		font-family: 'Roboto', sans-serif;
+		font-family: 'Lato', sans-serif;
 		font-weight: 300;
 		font-size: 17pt;
 		line-height: 1.75em;
-		color: #888;
-		-webkit-text-stroke: 0.1px;
+		color: #666;
 	}
 
 	h1,h2,h3,h4,h5,h6
 	{
 		color: #666;
 		margin: 0 0 1em 0;
-		font-weight: 100;
 		line-height: 1.5em;
 	}
 	
@@ -817,11 +815,11 @@
 	{
 		position: relative;
 		margin: 0;
-		background-image:			url('images/overlay.png'),			url('../images/header.jpg');
+		background-image:			url('images/overlay.png'),			url('../images/header-dark.jpg');
 		background-size:			auto,								cover;
 		background-position:		top left,							center center;
 		background-repeat:			repeat,								no-repeat;
-		padding: 14em 0 14em 0;
+		padding: 8em 0 8em 0;
 		text-align: center;
 		color: #fff;
 	}
@@ -840,7 +838,6 @@
 			#header header p
 			{
 				margin-top: 1.25em;
-				font-weight: 100;
 				padding: 0;
 				font-size: 1.25em;
 				line-height: 1.5em;
@@ -865,15 +862,13 @@
 		.main > header
 		{
 			background: #fff;
-			text-align: center;
 			padding: 5em 0 5em 0;
 			margin: 0;
 		}
 		
 			.main > header h2
 			{
-				font-size: 2.25em;
-				font-weight: 100;
+				font-size: 2.0em;
 				margin-bottom: 0;
 			}
 		
@@ -881,7 +876,6 @@
 			{
 				margin: 2em 0 0 0;
 				padding: 0;
-				text-align: center;
 			}
 
 		.main > .content
@@ -933,6 +927,16 @@
 				padding-top: 0;
 				background: #fff;
 			}
+
+#first header {
+	background: url('../images/sectionbg.jpg') repeat;
+}
+
+#second header {
+	background: url('../images/corkboard_01.jpg') center/cover no-repeat;
+}
+
+
 
 /*********************************************************************************/
 /* Footer                                                                        */
@@ -1006,11 +1010,14 @@
 			left: 0;
 			background: #fff;
 			width: 100%;
-			height: 3em;
-			line-height: 3em;
+			height: 4em;
+			/* line-height: 3em; */
 			text-align: center;
 			cursor: default;
 			z-index: 1;
+			font-size: .65em;
+			line-height: 1.5em;
+		}
 		}
 		
 		.poptrox-popup .nav-next,
