--- a/css/style.css
+++ b/css/style.css
@@ -37,12 +37,12 @@
 		font-weight: 300;
 		font-size: 17pt;
 		line-height: 1.75em;
-		color: #666;
+		color: #111;
 	}
 
 	h1,h2,h3,h4,h5,h6
 	{
-		color: #666;
+		color: #111;
 		margin: 0 0 1em 0;
 		line-height: 1.5em;
 	}
@@ -723,15 +723,15 @@
 				height: 2em;
 				font-size: 4.5em;
 				border-radius: 100%;
-				box-shadow: inset 0 0 0 1px #666;
-				color: #666;
+				box-shadow: inset 0 0 0 1px #111;
+				color: #111;
 				line-height: 2.1em;
 			}
 		
 			.feature-icon:before
 			{
 				content: '';
-				background: #666;
+				background: #111;
 				position: absolute;
 				bottom: 0;
 				left: 50%;
@@ -750,7 +750,7 @@
 				bottom: 0.65em;
 				width: 1px;
 				height: 4.35em;
-				background: #666;
+				background: #111;
 				margin-left: -0.5px;
 			}
 
@@ -815,9 +815,9 @@
 	{
 		position: relative;
 		margin: 0;
-		background-image:			url('images/overlay.png'),			url('../images/header-dark.jpg');
+		background-image:			url('images/overlay.png'),			url('../images/topbg.jpg');
 		background-size:			auto,								cover;
-		background-position:		top left,							center center;
+		background-position:		top left,							top left;
 		background-repeat:			repeat,								no-repeat;
 		padding: 8em 0 8em 0;
 		text-align: center;
@@ -837,9 +837,10 @@
 			
 			#header header p
 			{
-				margin-top: 1.25em;
+				margin-top: .25em;
 				padding: 0;
 				font-size: 1.25em;
+				font-style: italic;
 				line-height: 1.5em;
 				text-align: center;
 			}
