--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,7 @@
 	
 	p
 	{
-		text-align: justify;
+		
 	}
 
 	header
@@ -281,7 +281,12 @@
 					margin: 0 auto;
 					width: auto;
 				}
-
+			.image.circle 
+			{
+				border-radius: 100%;
+				width: 200px;
+				height: 200px;
+			}
 	/* List */
 
 		ul.default
