--- a/css/style.css
+++ b/css/style.css
@@ -957,6 +957,10 @@
 	#second header {
 		background: url('../images/d67_section_03.jpg') repeat;
 	}
+	#third header {
+		background: url('../images/d67_section_04.jpg') repeat;
+	}
+	
 
 /*********************************************************************************/
 /* About the Playwright                                                                        */
