--- a/css/style.css
+++ b/css/style.css
@@ -229,7 +229,7 @@
 			}
 
 	/* Image */
-
+		
 		.image
 		{
 			position: relative;
@@ -986,6 +986,35 @@
 /* Explore the Play
 /*********************************************************************************/
 
+
+	#second header {
+		background: url('../images/d67_section_03.jpg') repeat;
+		color: #333;
+	}
+	
+	#second header h2  {
+		color: #f9f9f9;
+		font-weight: bold;
+		text-shadow: 1px 1px 1px #333;
+		margin: 0 0 1em 0;
+	}	
+	#second header p
+	{
+		color: #f9f9f9;
+		text-shadow: 1px 1px 1px #333;
+	}	
+	
+	#second header a
+	{
+		border-bottom: none;
+	}	
+	
+	#second header .4u
+	{
+		padding: 0;
+		margin: 0;
+	}	
+	
 	.style2 .title
 	{
 		text-align: center;
@@ -997,21 +1026,11 @@
 		text-shadow: 1px 1px 1px #333;
 		text-align: center;
 	}
-
-	#second header {
-		background: url('../images/d67_section_03.jpg') repeat;
-		color: #f9f9f9;
-	}
 	
-	#second header h2, #second header p {
-		color: #f9f9f9;
-		text-shadow: 1px 1px 1px #333;
-	}	
+	.row+.row>* {
+padding: 0px
+}
 	
-	#second .row {
-		margin: 3em 0 0 0;
-	}
-
 /*********************************************************************************/
 /* Voices of Detroit
 /*********************************************************************************/
