--- a/css/style.css
+++ b/css/style.css
@@ -637,7 +637,7 @@
 			-webkit-appearance: none;
 			position: relative;
 			display: inline-block;
-			background: #3d3d3d;
+			background: #333;
 			padding: 0.85em 3em 0.85em 3em;
 			border-radius: 0.25em;
 			cursor: pointer;
@@ -1027,9 +1027,9 @@
 		text-align: center;
 	}
 	
-	.row+.row>* {
-padding: 0px
-}
+	#second > .row+.row>* {
+		padding: 0px
+	}
 	
 /*********************************************************************************/
 /* Voices of Detroit
