--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,28 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Detroit '67 | A play by Dominique Morisseau</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="Educational and informational website about the 2014 recipient of the Edward M. Kennedy Prize for Drama Inspired by American History - Detroit '67 by Dominique Morisseau" />
-		<meta name="keywords" content="edward kennedy prize, edward m kennedy prize, emk prize, columbia university, ambassador jean kennedy smith, drama award, playwriting award, pulitzer prize, american history, historical drama, historical play, educational website, theater, theatre, tony kushner, prize for drama, prize for playwriting,
-		dominique morisseau, detroit 67, detroit, 1967 riots, african american history, black history, civil rights, civil rights theater, motown, detroit 67 script" />
-		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/jquery.scrolly.min.js"></script>
-		<script src="js/skel.min.js"></script>
-        <script src="js/jquery.poptrox.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-wide.css" />
-			<link href='http://fonts.googleapis.com/css?family=Lato:400,700' rel='stylesheet' type='text/css'>
-			<link href='http://fonts.googleapis.com/css?family=Candal' rel='stylesheet' type='text/css'>
-			<link href='http://fonts.googleapis.com/css?family=Bowlby+One+SC' rel='stylesheet' type='text/css'>
-			
-		</noscript>
-		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+             {{ partial "head.html" . }}
 	</head>
 	<body>
  <div class="container emk">
@@ -50,15 +29,9 @@
 </div>
 		<!-- Header -->
 			<section id="header" class="dark">
-				<header>
-					<h1><img src="images/logo.png" style="max-width: 100%"></h1>
-					<p>by Dominique Morisseau</p>
-					<ul class="menu">
-					         <li><a href="#first" class="button scrolly">About the Playwright</a></li>
-                             <li><a href="#second" class="button scrolly">Explore the Play</a></li>
-                             <li><a href="#third" class="button scrolly">Voices of Detroit</a></li>
-                        </ul>
-				</header>
+                            {{ range where .Data.Pages "Slug" "header_full" }}
+                               {{ .Content}}
+                            {{ end }}
 			</section>
 			
 		<!-- First -->
@@ -67,8 +40,9 @@
 					<div class="container">
 					    <div class="row">
 				        <div class="12u">
-	                   <h2><i><strong>Detroit '67</strong></i> by Dominique Morisseau is the recipient of the 2014 <br> <h2><strong><a href="http://kennedyprize.columbia.edu" target="_blank">Edward M. Kennedy Prize for Drama Inspired by American History.</a></strong></h2>				            
-						<p>The first in a 3-play cycle about playwright Dominique Morisseau's hometown Detroit, <i><strong>Detroit '67</strong></i> explores an explosive and decisive moment in a great American city. The play's compelling characters struggle with racial tension and economic instability. <i><strong>Detroit ’67</strong></i> is a work grounded in historical understanding that also comments meaningfully on the pressing issues of our day.</p>
+                            {{ range where .Data.Pages "Slug" "top_left" }}
+                              {{ .Content}}
+                            {{ end }}
 						</div>
 												   
 						</div>
