first pass at pulling in dynamic content. Unfortunately, there is much layout mixed in

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -40,9 +40,9 @@
 					<div class="container">
 					    <div class="row">
 				        <div class="12u">
-                            {{ range where .Data.Pages "Slug" "top_left" }}
-                              {{ .Content}}
-                            {{ end }}
+                            {{ range where .Data.Pages "Slug" "top_full" }}
+                             {{ .Content}}
+                           {{ end }}
 						</div>
 												   
 						</div>
@@ -58,12 +58,17 @@
 						    </div>
 							<div class="6u">
 								<section>
-									<p>Dominique Morisseau, Playwright and Actress, got her BFA in Acting from the University of Michigan and her start as a performance poet in the Detroit community of Harmonie Park. She has since become a noted award-winning playwright in NYC and is currently developing a 3-play cycle about her hometown, entitled “The Detroit Projects”.  The inaugural play <i>Detroit ’67</i>, about the riots/rebellion in 1967, originated at the Public Theater in New York City and extended at Classical Theatre of Harlem with the National Black Theatre. The production was nominated for 8 Audelco Theatre Awards including Best Playwright. The second play <i>Paradise Blue</i>, about Detroit’s 1949 jazz community uprooted by urban renewal, was the winner of the L. Arnold Weissberger Award and received development at Williamstown Theatre Festival, McCarter Theatre, New York Theatre Workshop, and the Public Theater. The third and final play <i>Skeleton Crew</i>, about a makeshift family of workers at the last exporting auto plant in the city, recently received a Barebones production at the Lark Play Development Center.</p>
+							  {{ range where .Data.Pages "Slug" "first_left" }}
+							     {{ .Content}}
+							  {{ end }}				
 								</section>
         							</div>
         							<div class="6u">
                                 <section>
-                                    <p>Ms. Morisseau, a recent PoNY (Playwright of New York) fellow, is also generating a substantial body of work independent of the Detroit cycle: <i>Sunset Baby</i>, <i>Follow Me To Nellie’s</i>, and <i>Blood At The Root</i>. Her work has also been published in NY Times bestseller- “Chicken Soup for the African American Soul” and in the Harlem-based literary journal “Signifyin’ Harlem”. She is a Jane Chambers Playwriting Award honoree, a two-time NAACP Image Award recipient, honoree for the Primus Prize by the American Theatre Critics Association, and winner of the Stavis Playwriting Award. U of M has also awarded her with their Emerging Leader Award, and the city of Detroit has honored her with a Spirit of Detroit award. Most substantially, Dominique has recently been awarded the esteemed Edward M. Kennedy Prize for Drama. She is an artist that believes wholeheartedly in the power and strength of community.</p>
+								  {{ range where .Data.Pages "Slug" "first_right" }}
+								     {{ .Content}}
+								  {{ end }}				
+ 
                                 </section>
         							</div>
         	               </div>
@@ -75,7 +80,9 @@
                        </div>
         				 <div class="row">
                                <div class="12u title">
-                                   <iframe width="700" height="400" src="http://www.youtube.com/embed/H9c2zjByA44" frameborder="0" allowfullscreen></iframe>
+								  {{ range where .Data.Pages "Slug" "first_bottom" }}
+								     {{ .Content}}
+								  {{ end }}				
                                </div>
                          </div>
                           
@@ -94,60 +101,20 @@
 			<section id="second" class="main">
 				<header>
 					<div class="container">
-						<h2>Download excerpts of <i>Detroit '67</i></h2>
-						<p>The full script for <i>Detroit '67</i> is available for purchase at <a href="http://www.samuelfrench.com/p/12567/detroit-67" target="_blank"><strong>Samuel French</strong></a>.</p>
-						<div class="row scripts">
-						    <div class="4u"><a href="files/d67scenes12.pdf" target="_blank"><img src="images/d67_script_thumb_01.png" class="script_thumb"></a>
-						        
-						    </div>
-						    <div class="4u"><a href="files/d67scene5.pdf" target="_blank"><img src="images/d67_script_thumb_02.png" class="script_thumb"></a>
-						        
-						    </div>
-						    <div class="4u"><a href="files/d67scene3.pdf" target="_blank"><img src="images/d67_script_thumb_03.png" class="script_thumb"></a>
-						        
-						    </div>
-						</div>
-						<div class="row">
-						    <div class="4u"><p><a href="files/d67scenes12.pdf" target="_blank" class="button">Act 1, Scenes 1 & 2</a></p></div>
-						    <div class="4u"><p><a href="files/d67scene5.pdf" target="_blank" class="button">Act 1, Scene 5</a></p></div>
-						    <div class="4u"><p><a href="files/d67scene3.pdf" target="_blank" class="button">Act 2, Scene 3</a></p></div>
-						</div>
+								  {{ range where .Data.Pages "Slug" "second_top" }}
+								     {{ .Content}}
+								  {{ end }}				
 					</div>
 				</header>
 				<div class="content dark style2">
 					<div class="container">
-					  <div class="row">
-					      <div class="12u title">
-					          <h2>Production photos from the Public Lab production of <i>Detroit ’67</i></h2>
-					          <p>Directed by Kwame Kwei-Armah at <a href="http://www.publictheater.org/" target="blank">The Public Theater</a> at Astor Place Tuesday, February 26 2013 through Sunday, March 17 2013. Photo credit: Joan Marcus. </p>
-					      </div>
-					  </div>
-					        
-			<div class="row">
-				<div class="12u">			
-				<div class="inner gallery">
-                    <div class="row">
-                        <div class="3u"><a href="images/fulls/Detroit670002rR.jpg" class="image fit"><img src="images/thumbs/Detroit670002rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670003rR.jpg" class="image fit"><img src="images/thumbs/Detroit670003rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670005rR.jpg" class="image fit"><img src="images/thumbs/Detroit670005rR.jpg" alt="" title="Brandon J. Dirden and Francois Battiste in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670007rR.jpg" class="image fit"><img src="images/thumbs/Detroit670007rR.jpg" alt="" title="Michelle Wilson and Francois Battiste in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                    </div>
-                    <div class="row">
-                        <div class="3u"><a href="images/fulls/Detroit670015rR.jpg" class="image fit"><img src="images/thumbs/Detroit670015rR.jpg" alt="" title="Michelle Wilson and Brandon J. Dirden in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670021rR.jpg" class="image fit"><img src="images/thumbs/Detroit670021rR.jpg" alt="" title="Samantha Soule, De’Adre Aziza, and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670032rR.jpg" class="image fit"><img src="images/thumbs/Detroit670032rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670044rR.jpg" class="image fit"><img src="images/thumbs/Detroit670044rR.jpg" alt="" title="De’Adre Aziza, Francois Battiste, and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                    </div>
-                    <div class="row">
-                        <div class="3u"><a href="images/fulls/Detroit670060rR.jpg" class="image fit"><img src="images/thumbs/Detroit670060rR.jpg" alt="" title="De’Adre Aziza and Francois Battiste in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670084rR.jpg" class="image fit"><img src="images/thumbs/Detroit670084rR.jpg" alt="" title="De’Adre Aziza and Michelle Wilson in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670086rR.jpg" class="image fit"><img src="images/thumbs/Detroit670086rR.jpg" alt="" title="Francois Battiste and De’Adre Aziza in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
-                        <div class="3u"><a href="images/fulls/Detroit670109rR.jpg" class="image fit"><img src="images/thumbs/Detroit670109rR.jpg" alt="" title="Francois Battiste and Samantha Soule in the Public Lab production Detroit ’67, written by Dominique Morisseau and directed by Kwame Kwei-Armah, running at The Public Theater at Astor Place Tuesday, February 26 through Sunday, March 17. Photo credit: Joan Marcus." /></a></div>
+
+								  {{ range where .Data.Pages "Slug" "second_bottom" }}
+								     {{ .Content}}
+								  {{ end }}				
                     </div>
                 </div>
-						</div>
-					</div>
-			
+		
 		              <div class="row">
                                <div class="12u return">
                                    <a href="#header" class="button scrolly">Top of Page</a>
@@ -161,86 +128,19 @@
 			<section id="third" class="main">
 				<header>
 					<div class="container poem">
-                    <p>Of all the many dreams I hoard<br>
-                    Tickets for flights I've yet to board<br>
-                    Where the soil is rich with words enjoyed<br>
-                    The palms are weathered yet still support<br>
-                    The women weathered but still comfort<br>
-                    Where leaves in Fall they fall to chords<br>
-                    And bees in Spring don't sting they sing<br>
-                    My lonely heart tethers to one escort<br>
-                    My main has roots in dear Detroit.<br>
-                    <strong><i>- Joel Fluent Greene</i></strong>
-
+								  {{ range where .Data.Pages "Slug" "third_top" }}
+								     {{ .Content}}
+								  {{ end }}
 					</div>
 				</header>
 	
 				<div class="content dark style3">
 					<div class="container">
-						<div class="row">
-							<div class="12u">
-								<h2>Recommended Resources</h2>
-								<p>Dominique Morisseau was inspired and influenced by many novels, stories, poems, songs, and art. She was also influenced by reading articles from her uncle, Eddie Morisseau, and oral histories from her mother, father, uncles, and father-in-law.  </p>
-								</div>
-								</div>
-  
-								 <div class="row">
-								 <div class="4u">
-								    <h4>Detroit Authors</h4>
-								    <ul>
-								        <li>J Keys</li>
-                                        <li>Chantay Legacy Leonard</li>
-                                        <li>Jessica Care Moore</li>
-                                        <li>Khary Kimani Turner</li>
-                                        <li>Paradiz Williams</li>
-                                        <li>Changa Bey</li>
-                                        <li>Bilal</li>
-                                        <li>Joel Fluent Greene</li>
-								    </ul>
-								    <h4>Books about Detroit</h4>
-								    <ul>
-								        <li><a href="http://www.amazon.com/Detroit-Revolution-Updated-Edition-Classics/dp/0896085724" target="_blank"><strong><i>Detroit, I do mind dying</i></strong> by Dan Georgakas</a></li>
-								        <li><a href="http://www.amazon.com/Detroit-Violence-Revised-Edition-Series/dp/0814321046" target="_blank"><strong><i>Detroit: City of Race and Class Violence</i></strong> by B. J. Widick</a></li>
-								        <li><a href="http://www.amazon.com/Divided-Soul-Life-Marvin-Gaye/dp/030681191X" target="_blank"><strong><i>Divided Soul: The Life of Marvin Gaye</i></strong> by David Ritz</a></li>
-								    </ul>
-								    
-                            </div>
-                            <div class="4u">
-                              <h4>Other Recommended Reading</h4>
-                                    <ul>
-                                        <li><a href="http://www.amazon.com/Native-Son-Richard-Wright/dp/0061148504" target="_blank"><strong><i>Native Son</i></strong> by Richard Wright</a></li>
-                                        <li><a href="http://www.amazon.com/The-Street-Novel-Ann-Petry/dp/0395901499" target="_blank"><strong><i>The Street</i></strong> by Ann Petry</a></li>
-                                
-                                        
-                                        <li><a href="http://www.amazon.com/Makes-Me-Wanna-Holler-America/dp/0679740708" target="_blank"><strong><i>Makes Me Wanna Holler</i></strong> by Nathan McCall</a></li>
-                                                                               <li><a href="http://www.amazon.com/The-Autobiography-Malcolm-Told-Haley/dp/0345350685" target="_blank"><strong><i>The Autobiography of Malcolm X</i></strong> by Alex Haley</a></li>
-                                        <li><a href="http://www.amazon.com/GraceLand-A-Novel-Chris-Abani-ebook/dp/B0057QT72E" target="_blank"><strong><i>Graceland</i></strong> by Chris Abani</a></li>
-                                        <li><a href="http://www.amazon.com/River-Cross-Heart-Oprahs-Book/dp/B00008RWCM" target="_blank"><strong><i>River Cross My Heart</i></strong> by Breena Clarke</a></li>
-                                        <li><a href="http://www.amazon.com/Breath-Eyes-Memory-Oprahs-Book/dp/037570504X" target="_blank"><strong><i>Breath, Eyes, Memory</i></strong> by Edwidge Danticat </a></li>
-                                                                               <li><a href="http://www.amazon.com/Roll-Thunder-Hear-My-Cry/dp/0142401129" target="_blank"><strong><i>Roll of Thunder, Hear My Cry</i></strong> by Mildred D. Taylor</a></li>
-                                        <li><a href="http://www.amazon.com/Assata-An-Autobiography-Shakur/dp/1556520743" target="_blank"><strong><i>Assata</i></strong> by Assata Shakur</a></li>
-                                    </ul>
-                                    <h4>Films & Plays</h4>
-                                    <ul>
-                                        <li><a href="http://en.wikipedia.org/wiki/Cooley_High" target="_blank"><strong><i>Cooley High</i></strong> directed by Michael Schultz, produced by Steve Krantz, written by Eric Monte</a></li>
-                                        <li><a href="http://en.wikipedia.org/wiki/No_Place_to_be_Somebody" target="_blank"><strong><i>No Place to be Somebody</i></strong> by Charles Gordone</a></li>
-                                        <li><a href="http://www.amazon.com/Bourbon-at-Border-Acting-Edition/dp/082222075X" target="_blank"><strong><i>Bourbon at the Border</i></strong> by Pearl Cleage</a></li>
-                    
-                                </ul>
-								</p>
-							</div>
-							<div class="4u">
-							    <h4>Music</h4>
-							     <iframe src="https://embed.spotify.com/?uri=spotify:user:emkprize:playlist:5zSOB1nKDThsKZaeQtDXTk" width="300" height="380" frameborder="0" allowtransparency="true"></iframe>
-							</div>
-                            </div>
-                             <div class="row">
-                               <div class="12u return">
-                                   <a href="#header" class="button scrolly">Top of Page</a>
-                               </div>
-                            </div>         
-					</div>
-				</div>
+								  {{ range where .Data.Pages "Slug" "third_bottom" }}
+								     {{ .Content}}
+								  {{ end }}
+					  </div>
+			</div>
 			</section>
 
 			<section id="fourth" class="main">
