pull in fourth section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -146,33 +146,9 @@
 			<section id="fourth" class="main">
 				<header>
 					<div class="container">
-						<div class="row">
-						    <div class="6u">
-						        <ul>
-						            <li>The Edward M. Kennedy Prize for Drama Inspired by American History honors the late Senator’s love of theater and his profound interest in American history. It is awarded annually to a new play or musical that enlists theater’s power to explore the past of the United States, to participate meaningfully in the great issues of our day through public conversation, grounded in historical understanding, that is essential to the functioning of a democracy.
-				                <a href="http://kennedyprize.columbia.edu" target="_blank">Read more about the prize.</a></li>
-				                 <li style="clear: both; display: inline; padding: 1em 2em 0 0 ; float: left;">
-                                     <a href="http://kennedyprize.columbia.edu" target="_blank"><img src="images/emk_logo.png"></a>
-                                </li>
-                                <li style="display: inline; padding: 1em 2em 0 0 ; float: left;">
-                                   <a href="http://ccnmtl.columbia.edu" target="_blank"><img src="images/ccnmtl_logo.png"></a>
-                                </li>
-						        </ul>
-						    </div>
-						    <div class="2u">
-						    <ul>
-                                    <li><a href="#header" class="scrolly">Top of Page</a></li>
-                                    <li><a href="#first" class="scrolly">About the Playwright</a></li>
-                                    <li><a href="#second" class="scrolly">Explore the Play</a></li>
-                                    <li><a href="#third" class="scrolly">Voices of Detroit</a></li>
-                                </ul>
-						    </div>
-						    <div class="4u">
-						        <a class="twitter-timeline" href="https://twitter.com/EMKPrize" data-widget-id="515614675476574209">Tweets by @EMKPrize</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-						    </div>
-						
-						</div>
+								  {{ range where .Data.Pages "Slug" "fourth_full" }}
+								     {{ .Content}}
+								  {{ end }}
 					</div>
 				</header>
 		
