--- a/css/style.css
+++ b/css/style.css
@@ -1052,14 +1052,43 @@
 /*********************************************************************************/
 /* Voices of Detroit
 /*********************************************************************************/
-
+	#third .container h4 {
+		font-size: 1.45em;
+		line-height: 2em;
+	}
 	.poem {
 		font-size: 1.5em;
 		line-height: 1.8em;
 	}
-
-
-
+	.poem p {
+		font-size: .75em;
+		line-height: 1.75em;
+	}
+	.pdf_dl {
+		width: 100%;
+		height: 200px;
+		background-image: url('../images/fulls/Detroit670007rR.jpg');
+		margin: 2em 0 2em 0;
+		border-radius: 10px;
+	}
+	.pdf_dl small {
+		font-size: .5em;
+	}
+	.pdf_link {
+		background-color: #000;
+		float: right;
+		color: #fff;
+		height: 200px;
+		padding: 23px;
+		width: 30%;
+		font-size: 1.75em;
+		opacity: .8;
+		line-height: 1em;
+		border-radius: 0 10px 10px 0;
+	}
+	.pdf_link a:hover {
+		text-decoration: underline;
+	}
 
 /*********************************************************************************/
 /* Footer                                                                        */
